# gftnet-trial

./: contants.py  dataset_utils.py  engine.py  graph_builder.py  main.py  pyproject.toml  run_glue_no_trainer.py  trainer.py  utils.py
gftnet/: configuration_fnet.py  model.py
on-progress/: graph_generation.py  hp_search.py  run_glue.py
