[tool.poetry]
name = "trial-sarp"
version = "0.1.0"
description = ""
authors = ["Arda Can Aras <ardaaras99@gmail.com>"]
readme = "README.md"
packages = [{include = "trial_sarp"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
torch = "^2.0.0"
transformers = "^4.28.1"
scipy = "^1.10.1"
datasets = "^2.12.0"
scikit-learn = "^1.2.2"
optuna = "^3.1.1"
evaluate = "^0.4.0"
nltk = "^3.8.1"
gensim = "^4.3.1"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
