[tool.poetry]
name = "gftnet-trial"
version = "0.1.0"
description = ""
authors = ["Arda Can Aras <ardaaras99@gmail.com>"]
readme = "README.md"
packages = [{include = "gftnet_trial"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
torch = "^2.0.1"
transformers = "^4.30.2"
pandas = "^2.0.3"
numpy = "^1.25.0"
datasets = "^2.13.1"
typing-extensions = "^4.7.1"
ipykernel = "^6.23.3"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
evaluate = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
